Price-ms: alert system + security improvements